# claude-fashion-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  main.py  package-lock.json  package.json  pyproject.toml  workflow.md
.claude/skills/kling-video-generator/: SKILL.md
.claude/skills/seedance-video-generator/: SKILL.md
prompts/: fashion_video_creator.md
