[project]
name = "claude-fashion-agent"
version = "0.1.0"
description = "Fashion video generation agent using Claude Vision and fal.ai"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.41",
    "fal-client>=0.1.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]
